objects/Membrane_Health_Check__c.object
<CustomObject>
    <fields>
        <fullName>Composite_Graph_Request__c</fullName>
        <label>Composite Graph Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Composite_Graph_Result__c</fullName>
        <label>Composite Graph Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Generated_JSON__c</fullName>
        <label>Generated JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Membrane_Definition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Membrane Definition</label>
        <referenceTo>Membrane_Definition__c</referenceTo>
        <relationshipLabel>Membrane Health Checks</relationshipLabel>
        <relationshipName>Membrane_Health_Checks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Membrane__c</fullName>
        <label>Membrane</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_JSON__c</fullName>
        <label>Sample JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Schema_Check_Status__c</fullName>
        <label>Schema Check Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Fuzzy Pass</fullName>
                </value>
                <value>
                    <fullName>Strict Pass</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Membrane Health Check</label>
    <language>en_US</language>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Record_Id__c</columns>
        <columns>Schema_Check_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MHC-{0000}</displayFormat>
        <label>Health Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membrane Health Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>